--- a/.env
+++ b/.env
@@ -5,6 +5,7 @@ USER_NAME='root'
 PASSWORD=''
 PORT_DB=3306
 USER_EMAIL='myapp.mordechai@gmail.com'
+ADMIN_EMAIL='shukrunorit@gmail.com'
 PASSWORD_EMAIL='hhtthnshuwpjilju'
 
 //PASSWORD_EMAIL='mshukrun1997'
